backpack/tests/snapshots/vendors_test__bitbucket.snap
---
source: backpack/tests/vendors_test.rs
expression: assets
---
Assets {
    archive: Some(
        Archive {
            url: "https://bitbucket.org/microsoft/azure-cli-run/get/refs/heads/master.tar.gz",
            root: FirstFolder,
        },
    ),
    git: Some(
        "git@bitbucket.org:microsoft/azure-cli-run.git",
    ),
}
