backpack/tests/snapshots/vendors_test__github.snap
---
source: backpack/tests/vendors_test.rs
expression: assets
---
Assets {
    archive: Some(
        Archive {
            url: "https://github.com/jondot/hygen/archive/refs/heads/master.tar.gz",
            root: FirstFolder,
        },
    ),
    git: Some(
        "git@github.com:jondot/hygen.git",
    ),
}
