backpack/tests/snapshots/vendors_test__gitlab.snap
---
source: backpack/tests/vendors_test.rs
expression: assets
---
Assets {
    archive: Some(
        Archive {
            url: "https://gitlab.com/jondot/backpack-e2e/-/archive/refs/heads/master/backpack-e2e-refs-heads-master.tar.gz",
            root: FirstFolder,
        },
    ),
    git: Some(
        "git@gitlab.com:jondot/backpack-e2e.git",
    ),
}
